fix connected section header overlap

--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -865,9 +865,6 @@
   .w-\[10\%\] {
     width: 10%;
   }
-  .w-\[100px\] {
-    width: 100px;
-  }
   .w-\[12px\] {
     width: 12px;
   }
@@ -915,6 +912,9 @@
   }
   .w-\[100dvw\] {
     width: 100dvw;
+  }
+  .w-\[100px\] {
+    width: 100px;
   }
   .w-\[200px\] {
     width: 200px;
@@ -1395,8 +1395,17 @@
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
   }
+  .pt-\[30px\] {
+    padding-top: 30px;
+  }
   .pt-\[50px\] {
     padding-top: 50px;
+  }
+  .pt-\[200px\] {
+    padding-top: 200px;
+  }
+  .pt-\[250px\] {
+    padding-top: 250px;
   }
   .pb-5 {
     padding-bottom: calc(var(--spacing) * 5);
